fix contact form spacing

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -2,7 +2,7 @@
     /* border: 1px solid pink; */
     margin: auto;
     height: 25em;
-    width: 50em;
+    width: fit-content;
     display: flex;
     flex-direction: column;
     position: relative;
